tests/compile_fail/from/legacy_struct_attribute.rs
#[derive(derive_more::From)]
#[from(types(i32, "&str"))]
struct Foo(String);

fn main() {}
